fix: perfectly align article dark mode button with Home by using calc(1.5em + 1.5rem) for top

--- a/style.css
+++ b/style.css
@@ -572,7 +572,7 @@ footer {
 
 .article-header-actions {
   position: absolute;
-  top: 1.5rem;
+  top: calc(1.5em + 1.5rem);
   right: clamp(0.7em, 4vw, 2em);
   display: flex;
   align-items: center;
